Crash in [@ mozilla::extensions::ChannelWrapper::GetUrlClassification]
Categories
(Core :: Networking: Cookies, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | fixed |
People
(Reporter: calixte, Assigned: jya)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-ea1d2c56-8ba3-414d-adc0-7a01e0191021.
Top 6 frames of crashing thread:
0 xul.dll mozilla::extensions::ChannelWrapper::GetUrlClassification toolkit/components/extensions/webrequest/ChannelWrapper.cpp:912
1 xul.dll static bool mozilla::dom::ChannelWrapper_Binding::get_urlClassification dom/bindings/ChannelWrapperBinding.cpp:4357
2 xul.dll mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3080
3 xul.dll static bool js::jit::CallNativeGetter js/src/jit/VMFunctions.cpp:1556
4 @0x14ffd0a295f
5 xul.dll trunc
There are 3 crashes (from 1 installation) in nightly 71 with buildid 20191020214712. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1588899.
[1] https://hg.mozilla.org/mozilla-central/rev?node=f2df73fda468
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
I added the assert because the original code made no sense to me. ChannelWrapper is supposed to only work with nsIHttpChannel. After we removed the classification flags from nsIHttpChannel into nsIClassifiedChannel, we could assert that all nsIHttpChannel objects also implement nsIClassifiedChannel.
What this crash shows however is that ChannelWrapper may not always be used with nsIHttpChannel object.
| Assignee | ||
Comment 2•6 years ago
|
||
Comment 4•6 years ago
|
||
| bugherder | ||
Comment 5•6 years ago
|
||
No crash on 71 beta, no need to uplift, wontfix for 71.
| Assignee | ||
Updated•6 years ago
|
Updated•4 years ago
|
Description
•