Bug 1590214 - Don't assert that ChannelWrapper will always be used with a nsIHttpChannel. r=mixedpuppy

Differential Revision: https://phabricator.services.mozilla.com/D50109